Odroid final ini files

--- a/monitor.ini
+++ b/monitor.ini
@@ -12,4 +12,4 @@ filename=monitor.log
 
 [execute]
 type=execute
-fail_command= bash $HOME/network/serverScript
+fail_command= bash /home/odroid/simplemonitor/scripts/serverScript
